javali_tests/A3/A4_keinestamSchmid/success/Positive.2.2.1.INVALID.START.POINT.javali
// Rule 2.2.1: There exists a class Main with a method main.

class Main {
	void main() {
		int i;
	}
}


