javali_tests/A3/A4_keinestamSchmid/fail/Error.2.2.1.INVALID.START.POINT.3.javali
// Rule 2.2.1: There exists a class Main with a method main.
// missing Main and main
class Not {
	void man() {
		int i;
	}
}


